# small-object-detection-benchmark

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  codecheck.yml  experiments  models  pyproject.toml  requirements.txt
configs/: coco128_exp_split.yaml  exp000_prepare.yaml  exp001_prepare.yaml  exp003_sahi.yaml  expA003_ants_sahi.yaml  expA004_ants_v1.yaml  expA005_ants_rfdetr.yaml  expA006_ants_tracking.yaml  expCAMPO_rfdetr.yaml  prepare_dataset.yaml
datasets/: README.md  camponotus_idea2_event_benchmark_v1.json  camponotus_idea2_event_benchmark_v1_auto.json
docker/: Dockerfile
docs/: architecture.md  camponotus_cvat_workflow.md  camponotus_idea2_artifacts.md  camponotus_idea2_event_protocol.md  camponotus_labeling_guidelines.md  camponotus_research_roadmap.md  cli_commands.md  datasets.md  experiments.md  methodology.md  reproduction.md  research_analysis.md  research_context.md  results.md  video_inference.md
models/: README.md
scripts/: repo_paths.py  run_ants_expA000.sh  run_ants_expA000_full.sh  run_ants_expA000_smoke.sh  run_ants_expA002b.sh  run_ants_expA003.sh  run_ants_expA003_sahi_ablation.sh  run_ants_expA004.sh  run_ants_expA004_staged_eval.sh  run_ants_expA005.sh  run_ants_expA006.sh  run_ants_prepare.sh  run_ants_prepare_coco.sh  run_camponotus_cvat_bootstrap.sh  run_camponotus_dataset_workflow.sh  run_camponotus_idea2_hybrid.sh  run_camponotus_ood_temporal_sweep.sh  run_camponotus_rfdetr_exp.sh  run_exp001.sh  run_exp002.sh  run_exp002b.sh  run_exp003.sh  run_smoke_test.sh  run_visualization.sh  track_video_common.py  (+1 more)
(+133 files in other folders)
