[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "small-object-detection-benchmark"
version = "0.1.0"
description = "Benchmarking YOLO26 and RF-DETR for small object detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    "pycocotools>=2.0.6",
    "tqdm>=4.65.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "PyYAML>=6.0",
    "ultralytics>=8.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
